[package]
name = "lumen-diff"
version = "0.1.0"
edition = "2024"
authors = ["Peam <contact@pmqueiroz.dev>"]

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
