[package]
name = "lumen-diff"
version = "0.1.0"
edition = "2024"
authors = ["Peam <contact@pmqueiroz.dev>"]

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
chromiumoxide = "0.9.1"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
heck = "0.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
