[package]
name = "lumendiff"
version = "0.3.4"
edition = "2024"
authors = ["Peam <contact@pmqueiroz.dev>"]
description = "High-performance visual regression testing tool"
repository = "https://github.com/pmqueiroz/lumen-diff"
license = "MIT"
keywords = ["cli", "testing", "diff", "storybook"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
chromiumoxide = "0.9.1"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
heck = "0.5.0"
image = "0.25.10"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.dist]
inherits = "release"
lto = "thin"
